--- a/views/includes/form.pug
+++ b/views/includes/form.pug
@@ -8,7 +8,7 @@ if login
     br
     label(for='password') Password:
     br
-    input#password(type='text' name='password')
+    input#password(type='password' name='password')
     br
     br
     if login
@@ -27,7 +27,7 @@ else
     br
     label(for='password') Password:
     br
-    input#password(type='text' name='password')
+    input#password(type='password' name='password')
     br
     br
     input(type='submit' value='Inscription' )
